css/main.scss
---
---

// Breakpoints
$bp-larger-than-mobile    : "min-width: 400px" !default;
$bp-larger-than-phablet   : "min-width: 550px" !default;
$bp-larger-than-tablet    : "min-width: 750px" !default;
$bp-larger-than-desktop   : "min-width: 1000px" !default;
$bp-larger-than-desktophd : "min-width: 1200px" !default;

// Colors
$light-grey: #efefef !default;
$dark-grey: #3d3d3d !default;
$secondary-color: lighten($dark-grey, 20%) !default;
$primary-color: $secondary-color !default;
$link-color: $primary-color !default;
$border-color: #bbb !default;
$font-color: $dark-grey !default;

$work-color: #ee6557 !default;
$play-color: #16a6b6 !default;

// Typography
$font-family-header: "pier_sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
$font-family: "brelaregular", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !default;

//Grid Variables
$container-width: 960px !default;
$container-width-larger-than-mobile: 85% !default;
$container-width-larger-than-phablet: 80% !default;
$total-columns: 12 !default;
$column-width: 100 / $total-columns !default; // calculates individual column width based off of # of columns
$column-margin: 4% !default; // space between columns

//Transitions
$plain-transition: all .25s ease-in-out;

// Header
//––––––––––––––––––––––––––––––––––––––––––––––––––
.navbar {
  /* center the element */
  right: 0;
  left: 0;
  margin-right: auto;
  margin-left: auto;
  font-family: $font-family-header;
  color: $dark-grey;
  text-align: center;
}

.index-navbar {
  position: fixed;
  z-index: 1;
  background: none;
}

.index-navbar-items > a{
  color: lighten($light-grey, 5%);
}

.navbar-content {
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.navbar-logo-holder {
  text-transform: uppercase;
  clear:both;
  height: 7rem;
}

.navbar-logo, .index-navbar-logo {
  height: 100%;
  display: inline-block;
}

.navbar-logo path {
  fill: $dark-grey;
  -webkit-transition: $plain-transition;
  -moz-transition: $plain-transition;
  -ms-transition: $plain-transition; /* IE10 is actually unprefixed */
  -o-transition: $plain-transition;
  transition: $plain-transition;
}

.index-navbar-logo path {
  fill: lighten($light-grey, 5%);
  -webkit-transition: $plain-transition;
  -moz-transition: $plain-transition;
  -ms-transition: $plain-transition; /* IE10 is actually unprefixed */
  -o-transition: $plain-transition;
  transition: $plain-transition;
}

.index-navbar-logo:hover path {
  fill: $dark-grey;
}

.navbar-logo:hover .e {
  fill: $work-color;
}

.navbar-logo:hover .c {
  fill: $play-color;
}

.navbar-list-holder {
  text-align: center;
}

.navbar-list {
  list-style: none;
  margin-bottom: 0;
  margin-right: 2rem;
  margin-top: 24px;
  display: inline-block;
}

.navbar-item {
  font-size: 1.4rem;
  position: relative;
  display: inline-block;
  margin-bottom: 0;
  margin-left: 2rem;
  float: right;
}

.navbar-item, a, .navbar-name a{
  text-decoration: none;
  color: $secondary-color;
  -webkit-transition: $plain-transition;
  -moz-transition: $plain-transition;
  -ms-transition: $plain-transition; /* IE10 is actually unprefixed */
  -o-transition: $plain-transition;
  transition: $plain-transition;
}

.navbar-item a:hover, .navbar-name a:hover{
  color: $dark-grey;
}

.navbar-name a:hover {
  color: $link-color;
}

.header-play:hover {
  color: $play-color !important;
}

.header-work:hover {
  color: $work-color !important;
}

@media (#{$bp-larger-than-phablet}) {
  .navbar {
    text-align: left;
  }

  .navbar-list {
    margin-right: 0rem;
  }

  .navbar-content {
    margin-bottom: 2rem;
  }

  .navbar-list-holder{
    text-align: right;
  }
}

// Index Page

.background-image {
  height: 100%;
  width: 100%;
  position: absolute;
  background: #ffffff url("/images/index.jpg");
  background-position: center center;
  background-size: cover;
  text-align: center;
}

.index-tag {
  background: lighten($light-grey, 5%);
  padding: 2rem;
  box-sizing: border-box;
  width: 45rem;
  height: 20.5rem;
  background: white;
  margin-left: auto;
  margin-right: auto;
  text-align: left;

  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.index-tag-inner {
  border: .35rem $dark-grey solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
}

.index-text {
  margin: 0;
}

.index-section{
  padding: 0.9rem;
  border-bottom: .25rem $dark-grey solid;
}

.index-section-header {
  text-align: left;
  font-size: 1rem;
  height: 1.55rem;
  font-family: $font-family-header;
}

.index-header {
  font-size: 2.5rem;
  text-align: left;
  height: 2.5rem;
}

.index-des {
  display: inline-block;
  font-size: 1.5rem;
  margin-left: .5rem;
  margin-right: .5rem;
  height: 1.5rem;
}

.index-link {
  display: inline-block;
  text-align: left;
}

.index-link-text {
  font-size: 2rem;
  text-align: left;
}

.index-sections {
  margin: 0;

  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
}

.index-item {
  padding: 0.9rem;
  margin-bottom: 0;
  border-right: .25rem $dark-grey solid;
  height: 100%;

  color: $dark-grey;

  display: inline-block;
  -webkit-box-flex: 1 0 0;
  -webkit-flex: 1 0 0;
  -moz-box-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.index-item-end {
  padding: 1rem;
  margin: 0;
  height: 100%;

  color: $dark-grey;

  display: inline-block;
  -webkit-box-flex: 1 0 0;
  -webkit-flex: 1 0 0;
  -moz-box-flex: 1 0 0;
  -ms-flex: 1 0 0;
  flex: 1 0 0;
}

.index-blog:hover  {
  color: $play-color;
}

.index-about:hover {
  color: $link-color;
}

.index-work:hover {
  color: $work-color
}

.index-section-text {
  font-size: 2rem;
}

// Posts

img {
  width: 100%;
  margin-bottom: -6.5px;
}

.post-list {
  text-align: center;
}

.blog-header, .work-header {
  text-transform: uppercase;
}

.post-title, .post-meta {
  color: $dark-grey !important;
}

.post-header, .blog-header, .work-header {
  text-align: center;
  color: $dark-grey;
}

.blog-header > a, .work-header > a {
  color: $primary-color;
}

.blog-header > a:hover {
  color: $play-color;
}

.work-header > a:hover {
  color: $work-color;
}

.play-color {
  color: $play-color;
}

.blog-desc {
  text-align: center;
}

.post-content {
  text-align: center;
}

.post-meta {
  margin-bottom: 1.0rem;
}

.pagination {
  width: 100%;
  clear: both;
  display: table;
}

.next {
  float: right;
}

.next:hover, .previous:hover {
  color: $play-color;
}

.embed-video {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; height: 0; overflow: hidden;
}

.embed-video iframe,
.embed-video object,
.embed-video embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

// About Page

// Contact Page
.contact-form {
  overflow: hidden;
  position: relative;
  width: 100%;
}

.contact-overlay {
  display: none;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: lighten($light-grey, 9.6%);
}

.thanks{
  margin-left: auto;
  margin-right: auto;
}

.input-label {
  text-transform: uppercase;
  font-family: $font-family-header;
  text-align: left;
}

.contact-textarea {
  height: 8em;
}

.submit-button {
  margin-bottom: 0;
}

// Work
.work-posts {
  display: inline-block;
  list-style: none;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-bottom: -2rem;
}

.work-post {
  position: relative;
  box-sizing: border-box;
  float: left;
  display: block;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-bottom: 1rem;
  width: 100%;
}

.work-meta {
  pointer-events: none;
  text-align: center;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  opacity: 0;
  -webkit-transition: $plain-transition;
  -moz-transition: $plain-transition;
  -ms-transition: $plain-transition; /* IE10 is actually unprefixed */
  -o-transition: $plain-transition;
  transition: $plain-transition;
}

.work-icon-holder {
  height: 7rem;
  margin-bottom: 1rem;
}

.work-icon {
  height: 100%;
  display: inline-block;
}

.work-icon path {
  fill: $work-color;
}

.work-icon circle, .work-icon rect, .work-icon polygon, .work-icon line, .work-icon polyline {
  stroke: $work-color;
}

.work-picture-caption {
  color: $work-color;
}

.white-overlay {
  pointer-events: none;
  text-align: center;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background: white;
  opacity: 0;
  -webkit-transition: $plain-transition;
  -moz-transition: $plain-transition;
  -ms-transition: $plain-transition; /* IE10 is actually unprefixed */
  -o-transition: $plain-transition;
  transition: $plain-transition;
}

.work-link:hover > .white-overlay {
  opacity: 0.7;
}

.work-link:hover > .work-meta {
  opacity: 1;
}

@media (#{$bp-larger-than-tablet}) {
  .work-post {
    width: 50%;
    margin-bottom: 1.5rem;
  }
}

.work-blurb  {
  margin-top: 1rem;
}

.work-desc {
  margin-bottom: 1rem;
}

.grayscale-image {
  -webkit-transition: $plain-transition;
  -moz-transition: $plain-transition;
  -ms-transition: $plain-transition; /* IE10 is actually unprefixed */
  -o-transition: $plain-transition;
  transition: $plain-transition;
}

.grayscale-image:hover {
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
}

.back:hover {
  color: $work-color;
}

.double-photo {
  margin-bottom: 2rem;
}

.double-photo > img {
  width: 50%;
  display: inline-block;
  box-sizing: border-box;
}

.double-left {
  padding-right:1rem;
}

.double-right {
  padding-left: 1rem;
}

// Footer
//––––––––––––––––––––––––––––––––––––––––––––––––––

.footer {
  font-family: $font-family;
  color: $dark-grey;
  font-size: 1.2rem;
  margin-top: 1.2rem;
  margin-bottom: 1.2rem;
  flex: none;
}

.footer-copyright {
  margin-bottom: 0.5rem;
}

.footer-list {
  list-style: none;
  margin-bottom: 0;
}

.footer-item {
  position: relative;
  display: inline;
  margin-bottom: 0;
  margin-right: 0.6rem;
  margin-left: 0.6rem;
}

.footer-item a {
  text-decoration: none;
  color: $secondary-color;
}

.footer-item a:hover {
  color: $dark-grey;
}

// Useful
//––––––––––––––––––––––––––––––––––––––––––––––––––
.fill-height-or-more {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.page-content {
  display: inline-block;
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -moz-box-flex: 1;
  -ms-flex: 1;
  flex: 1 0 auto;
}

.site-header, .site-footer {
  flex: none; /* 2 */
}

.scrollToTop{
  text-align:center;
  text-decoration: none;
  position:fixed;
  bottom:2rem;
  right:2rem;
  display:none;
  -webkit-transition: color .5s ease-in-out;
  -moz-transition: color .5s ease-in-out;
  -ms-transition: color .5s ease-in-out; /* IE10 is actually unprefixed */
  -o-transition: color .5s ease-in-out;
  transition: color .5s ease-in-out;
}

@media (max-width: 750px) {
  .scrollToTop {
    height: 0;
    overflow: hidden;
    visibility: hidden;
  }
}

